@@ -292,15 +292,18 @@ public final class HTTPProxyTCPProxyEngine extends AbstractTCPProxyEngine {
                 additionalRequestBytes.toByteArray());
             }
 
-            // Set our proxy engine up to create connections to the
-            // remoteEndPoint.
-            m_proxySSLEngine.setConnectionDetails(
-              EndPoint.clientEndPoint(localSocket), remoteEndPoint);
+            final Socket sslProxySocket;
+            synchronized (m_proxySSLEngine) {
+              // Set our proxy engine up to create connections to the
+              // remoteEndPoint.
+              m_proxySSLEngine.setConnectionDetails(
+                EndPoint.clientEndPoint(localSocket), remoteEndPoint);
 
-            // Create a new proxy connection to the proxy engine.
-            final Socket sslProxySocket =
-              getSocketFactory().createClientSocket(
-                m_proxySSLEngine.getListenEndPoint());
+              // Create a new proxy connection to the proxy engine.
+              sslProxySocket =
+                getSocketFactory().createClientSocket(
+                  m_proxySSLEngine.getListenEndPoint());
+            }
 
             // Set up a couple of threads to punt everything we receive
             // over localSocket to sslProxySocket, and vice versa.
